[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Maps/Nav.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/World/Menu.gd" type="Script" id=4]
[ext_resource path="res://src/World/World.gd" type="Script" id=5]

[sub_resource type="ButtonGroup" id=1]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="Nav" type="Navigation2D" parent="."]
script = ExtResource( 1 )

[node name="NavTimer" type="Timer" parent="Nav"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 320, 256 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 256, 256 )
shot_delay = 0.1

[node name="Enemies" type="Node" parent="."]

[node name="Projectiles" type="Node" parent="."]

[node name="Bombs" type="Node" parent="."]

[node name="Menu" type="ColorRect" parent="."]
margin_left = 496.0
margin_top = 16.0
margin_right = 620.0
margin_bottom = 496.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 36.0
margin_right = 124.0
margin_bottom = 36.0

[node name="ESLabel" type="Label" parent="Menu/VBoxContainer"]
margin_top = 40.0
margin_right = 124.0
margin_bottom = 54.0
text = "Enemy Speed: 75"

[node name="EnemySpeed" type="HSlider" parent="Menu/VBoxContainer"]
margin_top = 58.0
margin_right = 124.0
margin_bottom = 74.0
max_value = 200.0
value = 75.0
scrollable = false

[node name="PSLabel" type="Label" parent="Menu/VBoxContainer"]
margin_top = 78.0
margin_right = 124.0
margin_bottom = 92.0
text = "Player Speed: 50"

[node name="PlayerSpeed" type="HSlider" parent="Menu/VBoxContainer"]
margin_top = 96.0
margin_right = 124.0
margin_bottom = 112.0
max_value = 200.0
value = 50.0
scrollable = false

[node name="SSLabel" type="Label" parent="Menu/VBoxContainer"]
margin_top = 116.0
margin_right = 124.0
margin_bottom = 130.0
text = "Shot Speed: 150"

[node name="ShotSpeed" type="HSlider" parent="Menu/VBoxContainer"]
margin_top = 134.0
margin_right = 124.0
margin_bottom = 150.0
max_value = 500.0
value = 150.0

[node name="RTLabel" type="Label" parent="Menu/VBoxContainer"]
margin_top = 154.0
margin_right = 124.0
margin_bottom = 168.0
text = "Reload Time: 0.1"

[node name="ReloadTime" type="HSlider" parent="Menu/VBoxContainer"]
margin_top = 172.0
margin_right = 124.0
margin_bottom = 188.0
max_value = 10.0
step = 0.1
value = 0.1

[node name="CTLabel" type="Label" parent="Menu/VBoxContainer"]
margin_top = 192.0
margin_right = 124.0
margin_bottom = 206.0
text = "Conway Time: 2.0"

[node name="ConwayTime" type="HSlider" parent="Menu/VBoxContainer"]
margin_top = 210.0
margin_right = 124.0
margin_bottom = 226.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 2.0

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
margin_top = 230.0
margin_right = 124.0
margin_bottom = 244.0
text = "Enemy Move Style"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 248.0
margin_right = 124.0
margin_bottom = 272.0

[node name="DirectMove" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
focus_mode = 0
pressed = true
group = SubResource( 1 )

[node name="Label" type="Label" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 5.0
margin_right = 67.0
margin_bottom = 19.0
text = "Direct"

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 276.0
margin_right = 124.0
margin_bottom = 300.0

[node name="RandomMove" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 1 )

[node name="Label" type="Label" parent="Menu/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
text = "Random"

[node name="HBoxContainer3" type="TabContainer" parent="Menu/VBoxContainer"]
margin_top = 304.0
margin_right = 124.0
margin_bottom = 420.0

[node name="B" type="GridContainer" parent="Menu/VBoxContainer/HBoxContainer3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/B"]
margin_right = 36.0
margin_bottom = 24.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/B"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 24.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/B"]
margin_left = 80.0
margin_right = 116.0
margin_bottom = 24.0
text = "2"

[node name="3" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/B"]
margin_top = 28.0
margin_right = 36.0
margin_bottom = 52.0
pressed = true
text = "3"

[node name="4" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/B"]
margin_left = 40.0
margin_top = 28.0
margin_right = 76.0
margin_bottom = 52.0
text = "4"

[node name="5" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/B"]
margin_left = 80.0
margin_top = 28.0
margin_right = 116.0
margin_bottom = 52.0
text = "5"

[node name="6" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/B"]
margin_top = 56.0
margin_right = 36.0
margin_bottom = 80.0
text = "6"

[node name="7" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/B"]
margin_left = 40.0
margin_top = 56.0
margin_right = 76.0
margin_bottom = 80.0
text = "7"

[node name="8" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/B"]
margin_left = 80.0
margin_top = 56.0
margin_right = 116.0
margin_bottom = 80.0
text = "8"

[node name="D" type="GridContainer" parent="Menu/VBoxContainer/HBoxContainer3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/D"]
margin_right = 36.0
margin_bottom = 24.0
pressed = true
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/D"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 24.0
pressed = true
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/D"]
margin_left = 80.0
margin_right = 116.0
margin_bottom = 24.0
text = "2"

[node name="3" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/D"]
margin_top = 28.0
margin_right = 36.0
margin_bottom = 52.0
text = "3"

[node name="4" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/D"]
margin_left = 40.0
margin_top = 28.0
margin_right = 76.0
margin_bottom = 52.0
pressed = true
text = "4"

[node name="5" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/D"]
margin_left = 80.0
margin_top = 28.0
margin_right = 116.0
margin_bottom = 52.0
pressed = true
text = "5"

[node name="6" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/D"]
margin_top = 56.0
margin_right = 36.0
margin_bottom = 80.0
pressed = true
text = "6"

[node name="7" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/D"]
margin_left = 40.0
margin_top = 56.0
margin_right = 76.0
margin_bottom = 80.0
pressed = true
text = "7"

[node name="8" type="CheckBox" parent="Menu/VBoxContainer/HBoxContainer3/D"]
margin_left = 80.0
margin_top = 56.0
margin_right = 116.0
margin_bottom = 80.0
pressed = true
text = "8"

[node name="Reload" type="Button" parent="Menu/VBoxContainer"]
margin_top = 424.0
margin_right = 124.0
margin_bottom = 444.0
text = "Reload"
[connection signal="timeout" from="Nav/NavTimer" to="Nav" method="_on_NavTimer_timeout"]
[connection signal="value_changed" from="Menu/VBoxContainer/EnemySpeed" to="Menu" method="_on_EnemySpeed_value_changed"]
[connection signal="value_changed" from="Menu/VBoxContainer/PlayerSpeed" to="Menu" method="_on_PlayerSpeed_value_changed"]
[connection signal="value_changed" from="Menu/VBoxContainer/ShotSpeed" to="Menu" method="_on_ShotSpeed_value_changed"]
[connection signal="value_changed" from="Menu/VBoxContainer/ReloadTime" to="Menu" method="_on_ReloadTime_value_changed"]
[connection signal="value_changed" from="Menu/VBoxContainer/ConwayTime" to="Menu" method="_on_ConwayTime_value_changed"]
[connection signal="button_down" from="Menu/VBoxContainer/HBoxContainer/DirectMove" to="Menu" method="_on_DirectMove_button_down"]
[connection signal="button_down" from="Menu/VBoxContainer/HBoxContainer2/RandomMove" to="Menu" method="_on_RandomMove_button_down"]
[connection signal="pressed" from="Menu/VBoxContainer/Reload" to="Menu" method="_on_Reload_pressed"]
